--- a/backend/templates/category.html
+++ b/backend/templates/category.html
@@ -2,7 +2,6 @@
 <html>
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-                <meta name="description" content="Instaright Instapaper Firefox addon, realtime addon streaming, xmpp instapaper article updates, article recommendation" />
                 <meta name="keywords" content="Instaright categories, instaright topics" />
 		<meta name="title" content="Instaright Categories and Topics"  />
 		<meta name="description" content="Instaright Categories orginized data by topics help you easy infromation discovery" />
@@ -11,6 +10,7 @@
 		<script type="text/javascript" src="/_ah/channel/jsapi"></script>
                 <!--script src='../static/javascript/channel.js'></script-->
                 <script src='../static/javascript/invite.js'></script>
+                <script src='../static/javascript/instaright.js'></script>
                 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
                 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
@@ -147,13 +147,14 @@
                         			}
                         			link = e['l'];
                         			dateUpdated = new Date(e['u']);
+						updated_ago_string = updated_string(dateUpdated);
                         			lc = e['lc'];
                         			id = e['id'];
 						a = e['a'];
                         			original_url = e['ol'];
-						category=e['c'];
-						if (typeof(category) !== 'undefined' && category != '{{ category }}'){
-							alert('sanity check did not pass ('+category+' != {{ category }}..continue');
+						category=e['lc'];
+						if (typeof(category) == 'undefined' || (category != '{{ category }}')){
+							//alert('sanity check did not pass ('+category+' != {{ category }}..continue');
 							continue;
 						} 
 
@@ -192,17 +193,23 @@
                         			container.appendChild(domainElement);
                         			container.appendChild(document.createElement('br'));
 
-                        			contentParagraph = document.createElement('p');
+                        			contentParagraph = document.createElement('div');
+						contentParagraph.setAttribute('class', 'category_div');
 						if (typeof(lc) !== 'undefined' ){
 							contentParagraph.innerHTML = "<span class=\"text_bubble_cats\"><a href=\"/category/"+lc+"\">"+lc+"</a></span>";
 						} else {
                         				contentParagraph.innerHTML = dateUpdated;
 						}
 
+						contentParagraph_footer = document.createElement('div');
+						contentParagraph_footer.setAttribute('class', 'content_footer');
+						contentParagraph_footer.innerHTML = updated_ago_string;
+
                         			domainParagraph = document.createElement('p');
                         			domainParagraph.innerHTML = domainElement;
 
                         			container.appendChild(contentParagraph);
+                        			container.appendChild(contentParagraph_footer);
                        
                         			div.insertBefore(container, div.firstChild);
                         			$("#"+id).hide();
@@ -229,7 +236,7 @@
 		<div class="center clearfix">
 			<h5><a href="/">Instaright - Perfect information for you in realtime.</a></h5>
                 <ul class="menu borderless clearfix"> 
-			<li><a href="/category" title="Instaright most populat category list"><span>Categories</span></a></li>
+			<li><a href="/category" title="Instaright most popular category list"><span>Categories</span></a></li>
 			<li><a href="/tools" title="Instaright tools"><span>Tools</span></a></li>
                         {% if user %}
 			<li><a href="/user/dashboard"><span>{{ user }}</span></a></li>
@@ -267,29 +274,33 @@
                                                 margin:10px 0px 10px 0px;
                                                 padding:10px;
                                                 text-decoration:none;
-						height: 80px;
+						overflow: auto;
                                         }
                                 </style>
                                 <div id="stream"></div>
                         </div>
-                        <div class="left_box_bot"> 
-                        </div>
+			<div class="left_bot_mid">
+				<div class="left_bot_left"></div>
+				<div class="left_bot_center"></div>
+			</div>
                 </div>
                 <div id="right_col" class="grid_6">
                         <div id="right_box_top">
                                 <p style="text-align: center;">Instaright browser addons</p>
                                 <p style="text-align: center;"><a title="Instapaper firefox addon instapaper chrome extension" href="/tools"><img src="/static/images/install_now.png" style="width:220px; height: 60px;" alt="Instapaper firefox addon"/></a></p>
-                                <p class="social_media">Realtime tracking</p>
+                                <p class="social_media">Want to get updates on IM?</p>
                                 <div class="text-align: center; width: 270px;">
-                                        Track domains on Instaright in realtime<br>
-                                        on your favorite client.
+                                        Instaright provides updates on your favorite IM client. <br>
                                         <p id="jabbers">
                                         <img src="/static/images/messenger.png"/><img src="/static/images/gtalk.png"/><img src="/static/images/aim.png"/></p>
+					<p>To get started enter your jabber id and <span style="color:#0066CC;">press Enter</span></p>
                                         </div><p></p><div>
-                                        <p>To get started enter your jabber id and wait for invite from our bot and <span style="color:#0066CC;">press Enter</span></p>
-
                                         <input type="text" id="invite_jid" value="Enter your jabber id" />
                                         <div id="jid_result" style="text-align: center; "></div>
+					<p>As next step, you'll get contact request from instaright@appspot.com .
+					Accept request from and type <b>/help</b><br>
+					Next? Awesomeness is head of you!</p>
+
                                         <p></p>
                                 </div>
                         </div>
@@ -298,7 +309,7 @@
                                         <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Delicious Import">Delicious Import</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Delicious Import">Delicious Importer</a></li>
                                 </ul>
                         </div>
                         <div id="right_box_bot">
