--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -40,7 +40,7 @@
 		<div class="center clearfix">
 			<h5><a href="/">Instaright - Perfect information for you in realtime.</a></h5>
                 <ul class="menu borderless clearfix"> 
-			<li><a href="/category" title="Instaright most populat category list"><span>Categories</span></a></li>
+			<li><a href="/category" title="Instaright most popular category list"><span>Categories</span></a></li>
 			<li><a href="/tools" title="Instaright tools"><span>Tools</span></a></li>
                         {% if user %}
 			<li><a href="/user/dashboard"><span>{{ user }}</span></a></li>
